--- a/web/testtabs.html
+++ b/web/testtabs.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>LINE-HACK演講紀錄</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="images/logo.ico" type="image/x-icon" />
     <style>
-      body {font-family: Arial;}
+      body {
+        font-family: Arial;
+        margin:0;
+      }
       /* Style the tab */
       .tab {
         overflow: hidden;
         border: 1px solid #ccc;
         background-color: #f1f1f1;
+        position: fixed;
+        top: 0;
+        width: 100%;
       }
       /* Style the buttons inside the tab */
       .tab button {
@@ -32,10 +41,12 @@
       }
       /* Style the tab content */
       .tabcontent {
+        padding: 16px;
+        margin-top: 30px;
+        height: 100%;
         background: #263449;
         color: white;
         display: none;
-        padding: 6px 12px;
         border: 1px solid #ccc;
         border-top: none;
       }
@@ -43,12 +54,12 @@
   </head>
   <body style="background: #0b131a">
     <div class="tab">
-      <button class="tablinks" onclick="openCity(event, 'one')" id="defaultOpen">功能1</button>
-      <button class="tablinks" onclick="openCity(event, 'two')">功能2</button>
-      <button class="tablinks" onclick="openCity(event, 'three')">功能3</button>
-      <button class="tablinks" onclick="openCity(event, 'four')">功能4</button>
+      <button class="tablinks" onclick="openCity(event, 'one')" id="defaultOpen"><b>筆記</b></button>
+      <button class="tablinks" onclick="openCity(event, 'two')"><b>文章</b></button>
+      <button class="tablinks" onclick="openCity(event, 'three')"><b>佳句</b></button>
+      <button class="tablinks" onclick="openCity(event, 'four')"><b>公式</b></button>
     </div>
-    <div id="one" class="tabcontent"><h3>功能1</h3></div>
+    <div id="one" class="tabcontent"><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3></div>
     <div id="two" class="tabcontent"><h3>功能2</h3></div>
     <div id="three" class="tabcontent"><h3>功能3</h3></div>
     <div id="four" class="tabcontent"><h3>功能4</h3></div>
